<resources>
    <string name="app_name">CotorrasKiller</string>
    <string name="login">LOGIN</string>
    <string name="registro">REGISTRO</string>
    <string name="name">NOMBRE</string>
    <string name="email">EMAIL</string>
    <string name="password">CONTRASEÑA</string>
    <string name="imagenPerfil">FOTO DE PERFIL</string>
    <string name="confirm_password">CONFIRMAR CONTRASEÑA</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrar">REGISTRAR</string>


    <!-- MENU   -->
    <string name="puntuacionMenu">Mi puntuación</string>
    <string name="cotorrasMenu"> -- </string>
    <string name="emailMenu"> -- </string>
    <string name="nombreMenu"> -- </string>
    <string name="menuTxt">MENÚ</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="jugarBtn">JUGAR</string>
    <string name="rankingBtn">RANKING</string>
    <string name="seleccionImg">Seleccionar imagen de:</string>


    <!--ESCENARIO  -->
    <string name="contadorKills">0</string>
    <string name="jugadorTextView"> ---- </string>
    <string name="tiempoTextView">0S</string>

    <!--PANTALLA-->
    <string name="AnchoTV"> -- </string>
    <string name="AltoTV"> -- </string>

    <!--GAME OVER-->
    <string name="tiempoTerminado">¡Tiempo terminado!</string>
    <string name="hasMatado">Has matado </string>
    <string name="cotorrasMuertas"> -- </string>
    <string name="juegarDeNuevo">JUGAR DE NUEVO</string>
    <string name="irMenu">MENÚ</string>
    <string name="irRanking">RANKING</string>
    <string name="Galeria">Galeria</string>


    <!--RANKING-->
    <string name="puntuacionRanking">PUNTUACION</string>
    <string name="emailUsuarioRanking">Email del usuario</string>
    <string name="nombreUsuarioRanking">Nombre del usuario</string>
    <string name="juegoPausado">JUEGO PAUSADO</string>
    <string name="nuevaPartida">NUEVA PARTIDA</string>
    <string name="reanudar">REANUDAR</string>
    <string name="url_img">URL IMAGEN</string>
    <string name="enalce_imagen">ENLACE IMAGEN</string>
    <string name="icono">ICONO</string>

</resources>