<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuActivity">



        <!--MI PUNTUACION-->
    <TextView
        android:id="@+id/puntuacionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/puntuacionMenu"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--COTORRAS MATADAS-->
    <TextView
        android:id="@+id/cotorrasTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cotorrasMenu"
        android:textSize="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntuacionTxt" />
        <!--IMAGEN-->
    <!--NOMBRE-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgMenu"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cotorra_dead"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cotorrasTxt" />
    <LinearLayout
        android:id="@+id/userImgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imgMenu"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserMenu"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/cazador"
            app:civ_border_color="@color/black"
            android:layout_margin="5dp"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/nombreMenu"
            android:textSize="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


        <!--EMAIL-->

    <TextView
        android:id="@+id/userEmailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/emailMenu"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImgName" />

    <Button
        android:id="@+id/JugarBtn"
        android:background="@drawable/estilo_btn"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/jugarBtn"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/rankingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rankingBtn"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/estilo_btn"
        android:text="@string/rankingBtn"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/CerrarSesionBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CerrarSesionBtn"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:background="@drawable/estilo_btn"
        android:text="@string/cerrar_sesion"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
