<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo1"
    android:layout_height="match_parent"
    tools:context=".JuegoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        INFORMACION/MARCADOR-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/estilo_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AnchoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/AnchoTV"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/AltoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/AltoTV"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="3dp"
                android:src="@drawable/tira" />

            <TextView
                android:id="@+id/contadorKills"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/contadorKills"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/jugadorTextView"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/TiempoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/tiempoTextView"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        COTORRAS-->
        <FrameLayout
            android:id="@+id/espaicoAereo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCotorra"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/cotorra" />
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>