<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/estilor"
    android:layout_margin="5dp"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="MissingConstraints"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPlayerRanking"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:src="@drawable/cazador"/>
    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nombrePlayerRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:text="@string/nombreUsuarioRanking"/>
        <TextView
            android:id="@+id/emailPlayerRanking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textColor="@color/md_theme_light_secondaryContainer"
            android:text="@string/emailUsuarioRanking"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="11dp"
            android:text="@string/puntuacionRanking"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/puntuacionPlayerRanking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/md_theme_light_secondaryContainer"
            android:text="0"/>
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>